--- a/src/_version.scss
+++ b/src/_version.scss
@@ -1,5 +1,5 @@
 .info-3pQQBb:last-child::after {
-    content: "Fallout 4 Terminal 2.0.1";
+    content: "Fallout 4 Terminal 2.0.2";
     font-size: 12px;
     line-height: 16px;
     color: rgb(var(--rgb-highlight));
